tests/fail/include_twice.werk
include "included"
include "included"

#!file included=let a = "foo"
